@@ -1814,7 +1814,7 @@ This page is intended to be included in other pages using the
       <br />Default setting: __public__ (The public calendar)
   </td></tr>
 
-<tr><td valign="top">$_ALLOW_USER_OVERRIDE</td>
+<tr><td valign="top">_ALLOW_USER_OVERRIDE</td>
   <td>
       Specifies whether the calendar user can be specified in the URL
       (in which case the $username setting will be ignored) using
